Fix shifting when modals open

--- a/app/styles/common/_modals.scss
+++ b/app/styles/common/_modals.scss
@@ -22,6 +22,7 @@
   //border: 0;
   //margin-top:60px;
   //z-index:2000;
+  overflow: visible;
 
   &.modal-long{
     height: 60%;
@@ -176,6 +177,15 @@
  */
 body.modal-open {
   overflow: hidden;
+  padding-right: 15px;
+}
+
+/* Tablet */
+@media only screen and (max-width: 768px) and (orientation: portrait), only screen and (max-width: 1024px) and (orientation: landscape) {
+  body.modal-open {
+    padding-right: initial;
+
+  }
 }
 
 @media print {
